----------------------------------------------------------------------

1.0.1.1
----------------------------------------------------------------------
- Add a new Automated Email Response: User account created (i.e. welcome email)
- Add a warning when BuddyPress pages conflict with M2 Membership pages
- Add a warning when M2 is installed in an deprecated directory (can cause conflicts)
- Fix the BuddyPress registration form/workflow
- Fix the Profile Fields Add-on, now settings are actually saved
- Fix Invitation Code Add-on to not automatically change existing codes upon saving
- Fix bug that prevented deleting invoices
- Fix a bug that would temporarily grant access to a membership when user cancels payment
- Fix a bug that created duplicate email templates every time an email was sent
- Fix a bug in the reset-script that would delete too much data in multisite installs (see Help > Advanced Settings)
- Fix a PHP warning on Membership 2 pages about "invalid argument in foreach"

1.0.1.0
----------------------------------------------------------------------
- Add gateway: 2Checkout
- Add new Add-on for WPML integration
- Add new Add-on to enable Pro-Rating when switching memberships
- Add new Add-on to allow Search Engines to index protected content
- Add new Add-on to customize the Registration Form and User Profile Fields
- Add new Add-on that allows creation of custom Membership Attributes
- Add a new Add/Edit Member page where subscription details can be modified
- Add an admin notice when no payment gateway is active but paid memberships exist
- Add bulk actions to the Members admin page
- Add a dedicated Edit Membership page with improved layout
- Add an edit page to change the Membership Type at any time
- Add an edit page to override Automated Email Responses for each Membership
- Add an edit page to override Protection Messages for each Membership
- Add a new settings page to define Upgrade Paths to each Membership